# hybrid-agentic-ml-for-risk-assessment

./: .dockerignore  .gitignore  Dockerfile  README.md  count_positives.py  dvc.yaml  launch_acras.bat  main.py  params.yaml  pyproject.toml
.agents/rules/: git.md
config/: config.yaml  params.yaml  schema.yaml
data/: raw.dvc
data/processed/: financial_statements_training.csv  financial_statements_validation.csv  pd_training.csv  pd_validation.csv
data/raw/: estados_financieros_entrenamiento.csv  estados_financieros_validacion.csv  pd_entrenamiento.csv  pd_validacion.csv
notebooks/: eda_industrialized.ipynb
references/: 01_planning.md  02_product_requirements.md  03_user_story.md  04_project_overview.md  folder_structure.md  folder_structure.txt
reports/docs/: agentic_reasoning_engine.md  api_prediction_service.md  data_augmentation_report.md  dvc_pipeline_architecture.md  eda_report.md  feature_engineering_report.md  hf_assessment.md  ml_training_assessment.md  prediction_service.md  test_suite_report.md  user_interface_guide.md
scripts/: verify_gemini.py  verify_hf.py  verify_raw_gemini.py
src/agent/: config.py  graph.py  model_factory.py
src/agents/: __init__.py  config.py  graph.py  model_factory.py  prompts.py
src/app/: main.py  schemas.py
src/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_evaluation.py  model_registration.py  model_trainer.py
src/config/: configuration.py
src/constants/: __init__.py
src/entity/: config_entity.py
src/features/: __init__.py  build_features.py
tests/: conftest.py
(+47 files in other folders)
