[project]
name = "acras"
version = "0.1.0"
description = "Agentic Credit Risk Assessment System"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "langchain>=0.1.0",
    "langchain-google-genai>=0.0.9",
    "langchain-huggingface>=0.0.6",
    "google-generativeai>=0.4.0",
    "transformers>=4.38.0",
    "accelerate>=0.27.0",
    "streamlit>=1.31.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.4.0",
    "numpy>=1.26.0",
    "pydantic>=2.6.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "plotly>=5.18.0",
    "dvc>=3.42.0",
    "python-box>=7.0.0",
    "ensure>=1.0.0",
    "seaborn>=0.13.0",
    "matplotlib>=3.8.0",
    "jinja2>=3.1.0",
    "mlflow>=3.9.0",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "fpdf2>=2.8.6",
    "markdown>=3.10.2",
    "xhtml2pdf>=0.2.17",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "pytest>=8.0.0",
    "nbconvert>=7.16.0",
    "ipykernel>=6.29.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
